[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/scenes/hit_error.gd" type="Script" id=1]

[node name="HitError" type="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -40.0
margin_right = 207.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 1 )

[node name="Miss" type="ColorRect" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
anchor_top = 0.325
anchor_right = 1.0
anchor_bottom = 0.675
color = Color( 0.780392, 0.294118, 0.294118, 1 )

[node name="HitPoints" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0

[node name="Inaccurate" type="ColorRect" parent="HitPoints"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
anchor_top = 0.325
anchor_right = 1.0
anchor_bottom = 0.675
color = Color( 0.47451, 0.854902, 0.368627, 1 )

[node name="Accurate" type="ColorRect" parent="HitPoints/Inaccurate"]
anchor_left = 0.293
anchor_right = 0.707
anchor_bottom = 1.0
color = Color( 0.321569, 0.65098, 1, 1 )

[node name="MiddleMarker" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 1.0

[node name="AverageHit" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 8, 8 )
color = Color( 1, 1, 1, 0.8 )
